assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans:wght@300&display=swap');

/* general styles */

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: Anton, sans-serif;
}

h1, h2, h3, h4 {
    text-transform: uppercase;
    font-weight: 400;
    color: white;
}

/* header style */

header {
    background-color: white;
}

#title {
    float: left;
    margin-left: 10px;
    font-size: 160%;
    text-decoration-line: underline;
    margin-top: 12px;
    color: rgba(221, 69, 55, 1);
}

/* inter-page links */

#navigation {
    list-style-type: none;
    font-size: 140%;
    text-align: center;  
}

#navigation li {
    font-family: Anton, Open Sans;
    display: inline-block;
    margin-top: 20px;
    width: 15%;
}

#navigation a {
    text-decoration: none;
    color: rgba(221, 69, 55, 1);
}

#navigation a:hover {
    color: #00475b;
}

/* hero image */

#banner {
    height: 500px;
    width: 100%;
    background: url(../images/hero-image.jpg) center center;
    background-repeat: no-repeat;
}

#banner-text {
    font-size: 200%;
    color: white;
    width: 270px;
    height: 210px;
    padding: 10px;
    background-color: rgba(221, 69, 55, 0.8);
    margin-top: 30px;
    margin-left: 20px;
    position: absolute; 
}

#sub-text {
    text-transform: uppercase;
    font-size: 50%;
    margin-top: 90px;
    font-family: Anton, sans-serif;
}

/* about us banner */

#about-us {
    height: 500px;
    width: 100%;
    background-image: url(../images/about-us.jpg);
    background-repeat: no-repeat;
    background-color: #00475b;
}

#about-us h2 {
    font-size: 200%;
    color: white;
    text-align: center;
    padding-top: 200px;
}

h2 p {
    font-size: 70%;
}

/* meat or vegan section */

#menu {
    height: 500px;
    font-size: 110%;
    position: relative;
    }

#menu h1, #menu h2, #menu h3, #menu h4, #menu p {
    color: rgba(221, 69, 55, 1);
    margin-left: 4px;
}

#menu h1 {
    margin-top: 1px;
}

#menu h3 {
    margin-top: 2px;
    letter-spacing: 1px;
}

#meat {
    border: solid;
    border-color: rgba(221, 69, 55, 0.8);
    border-width: 4px;
    width: 33%;
    height: 492px;
    float: left;
    margin-bottom: 4px;
    margin-left: 4px;
    text-align: center;
}

#meat h1 {
    font-size: 300%;
    text-align: center;
    padding-top: 160px;
}

#vegan {
    border: solid;
    border-color: rgba(221, 69, 55, 0.8);
    border-width: 4px;
    width: 33%;
    height: 492px;
    float: right;
    margin-bottom: 4px;
    margin-right: 4px;
    text-align: center;
}

#vegan h1 {
    font-size: 300%;
    text-align: center;
    padding-top: 140px;
}

#decide {
    border: solid;
    border-color: rgba(221, 69, 55, 0.8);
    background-color: rgba(221, 69, 55, 0.8);
    border-width: 4px;
    width: 30%;
    height: 492px;
    margin: 0 auto;
    margin-top: 4px;
    text-decoration: none;
}

#decide h1, #decide h3, #decide p {
    color: white;
    letter-spacing: 1px;
    margin-top: 1px;
    text-align: center;
}

#decide h3 {
    text-decoration: underline;
}

/* footer */

footer {
    height: 100px;
    font-size: 160%;
    text-align: center;
    padding-top: 50px;
}

#footer {
    text-decoration: none;
    color: rgba(221, 69, 55, 1);
}

/* responsive elements */

@media screen and (max-width: 1200px) {
    #decide, #vegan, #meat {
        float: inherit;
        width: 80%;
        margin: 4px auto;
    }

    #menu a {
        text-decoration: none;
    }
}

@media screen and (max-width: 1050px) {
    #decide, #vegan, #meat {
        width: 90%;
    }
}

@media screen and (max-width: 950px) {
    #decide, #vegan, #meat {
        width: 95%;
    }

    #title {
        float: ;
    }

    #navigation {
        clear: left;
        margin-top: -5px;
    }
}

